Adjust project card responsiveness and spacing

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="images/git-sweaty-overview.png" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <link rel="shortcut icon" href="favicon.svg" />
-  <link rel="stylesheet" href="styles.css?v=20260225-1" />
+  <link rel="stylesheet" href="styles.css?v=20260301-2" />
 </head>
 <body>
   <div class="bg" aria-hidden="true"></div>
@@ -48,7 +48,10 @@
             <span class="repo-star-count" data-star-count aria-label="Repository star count">—</span>
           </a>
         </h2>
-        <p>Turn your Strava and Garmin activities into interactive GitHub-style contribution graphs.</p>
+        <p>
+          Turn your Strava and Garmin activities into interactive GitHub-style contribution graphs.
+          View my example <a href="https://adamspain.com/git-sweaty/" target="_blank" rel="noreferrer">Dashboard</a>.
+        </p>
         <div
           class="carousel"
           data-carousel
